22-02-2007 Qball <Qball@Sarine.nl>
	* src/playlist3.c:	Make option menu insensitive when it has no children.
	* src/playlist3.c:	Check if the browser has a ->(un)selected  function.
	* src/playlist3-artist-browser.c: Make an option to show artist images


18-02-2007 Qball <Qball@Sarine.nl>
	* src/Makefile.build:				Remove useless include.
	* src/playlist3-current-playlist.c:	Added date column
	* src/playlist3-information.c:		Hopefully fix alignment issues
	* src/playlist3-metadata.c:			Hopefully fix alignment issues
	* configure.ac:						Bump version to 0.14.1
	* src/eggcolumnmodel.c:				Add mising iter_children function to model interface.


17-02-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	Change order, so config isn't destroyed before f.e. meta
	data thread uses it.

01-02-2007 Qball <Qball@Sarine.nl.
	* src/playlist3.c:	Make pl3_window_fullscreen function.
	* glade/playlist3.glade:	Add fullscreen menu entry.

31-01-2007 Qball <Qball@Sarine.nl>
	* src/main.c:	A non-svn version by default no longer displays debug
	information.
	* src/main.c:	Ignore MPD_ACK_ERROR_EXISTS errors so playlist out of
	sync is handled less obstructive. (it does seem to correct itself anyway)
	* src/playlist-list.c:	Don't crash if you can't fetch the song.
	* src/main.c:	Stop error message spammage

26-01-2007 Qball <Qball@Sarine.nl>
    * src/id3info.c:				Add some performer code.
    * src/playlist-list.c:			Adding performer support.
    * src/playlist3-file-browser.c: hopefully fix stupid bug again.
	
25-01-2007 Qball <Qball@sarine.nl>
	* src/metadata.h:	Make gmpc wait for the meta_thread to finish.

10-01-2007 Qball <Qball@Sarine.nl>
	* src/preferences.c:	Changed the background to a lighter color

09-01-2007 Qball <Qball@sarine.nl>
	* src/metadata.c: Add an option to rename 'Jones, Norah' to 'Norah Jones'

 05-01-2007 Qball <Qball@sarine.nl>
 	* src/pixmaps: gmpc-add-url.png added

 02-01-2007 Qball <Qball@sarine.nl>
 	* configure.ac: fix a macro