@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<gtodo>
-  
-  
-  
-<category title="Playlist3" place="1"><item><attribute id="1099686098" priority="1" done="1" start_date="731890" completed_date="732137" notify="0" last_edited="1121000621"/><summary>Add more keybindings</summary><comment/></item><item><attribute id="1099687619" priority="1" done="0" start_date="731890" enddate="99999999" notify="0" endtime="-60" last_edited="1131388762"/><summary>Show keybindings in context menu</summary><comment>where possible</comment></item><item><attribute id="1099686081" priority="1" done="0" start_date="731890" notify="0" last_edited="1131637521"/><summary>Make a help function</summary><comment>With a small expl. of f.e. keybindings/search etc</comment></item><item xml:id="G1141839232"><priority>2</priority><completed percentage="1.00">1141917399</completed><starttime>1141839232</starttime><duetime/><lastedited>1141917399</lastedited><summary>Fix Search Window</summary><comment/></item><item xml:id="G1141839218"><priority>2</priority><completed percentage="1.00">1141917400</completed><starttime>1141839218</starttime><duetime/><lastedited>1141917400</lastedited><summary>Fix Ctrl-F in current playlist</summary><comment/></item></category><category title="Popup" place="0"><item><attribute id="1114526634" priority="1" done="1" start_date="732062" completed_date="732137" enddate="99999999" notify="0" endtime="-60" last_edited="1120951098"/><summary>fix cleaning of pl3_store</summary><comment/></item><item><attribute id="1115199324" priority="2" done="1" start_date="732070" completed_date="732142" notify="0" last_edited="1121432897"/><summary>show information window in serach mode.</summary><comment>done for playlist search
-</comment></item><item><attribute id="1121616928" priority="2" done="1" start_date="732144" completed_date="732164" notify="0" last_edited="1123353227"/><summary>already is spelt with one l</summary><comment/></item><item><attribute id="1114608150" priority="2" done="1" start_date="732063" completed_date="732164" notify="0" last_edited="1123355612"/><summary>saving playlist when allready existing.</summary><comment/></item><item><attribute id="1121444675" priority="2" done="1" start_date="732142" completed_date="732164" notify="0" last_edited="1123355954"/><summary>changing timeout by typing doesnt actually change it.</summary><comment/></item><item><attribute id="1131885977" priority="1" done="0" start_date="732263" enddate="99999999" notify="0" endtime="-60" last_edited="1131886012"/><summary>Show state changed</summary><comment>Allow the pop show changes like x-fade,random,repeat volume etc... just like the osd plugin.
-It should be an option.</comment></item></category><category title="general" place="2"><item><attribute id="1099760795" priority="1" done="1" start_date="731891" completed_date="732137" notify="0" last_edited="1121000624"/><summary>configure intltool check</summary><comment>configure should check for intltool, i think it allready does</comment></item><item><attribute id="1099686513" priority="0" done="1" start_date="731890" completed_date="732137" notify="0" last_edited="1121000626"/><summary>Make gnome-vfs a compile time option</summary><comment/></item><item><attribute id="1131717258" priority="3" done="1" start_date="732261" completed_date="732263" notify="0" last_edited="1131885442"/><summary>Fix that updating isn't detected anymore</summary><comment/></item><item><attribute id="1131718344" priority="2" done="0" start_date="732261" enddate="732270" notify="0" endtime="-60" last_edited="1131916455"/><summary>Make a todo list of things needed to be done</summary><comment>for gmpc</comment></item></category><category title="plugins" place="3"><item><attribute id="1120951169" priority="3" done="1" start_date="732137" completed_date="732137" notify="0" last_edited="1120990882"/><summary>Fix right mouse click multiple items</summary><comment>add press-event and check for selection. if more then one, then stop the signal..</comment></item><item><attribute id="1120951215" priority="2" done="1" start_date="732137" completed_date="732137" notify="0" last_edited="1120990910"/><summary>check if zxcvb works.</summary><comment>Is this gmpc error or install.
-Check on laptop.
-</comment></item><item><attribute id="1131885325" priority="3" done="1" start_date="732263" completed_date="732324" enddate="99999999" notify="0" endtime="-60" last_edited="1137141843"/><summary>Move plugins to seperate packages</summary><comment>* osd plugin done
-* wikipedia plugin done</comment></item></category><category title="file-browser" place="4"><item><attribute id="1132136919" priority="2" done="1" start_date="732266" completed_date="732324" notify="0" last_edited="1137141834"/><summary>Add "update folder" in context menu</summary><comment>In the right pane.</comment></item></category><category title="Playlist List" place="5"><item xml:id="G1141833596"><priority>3</priority><completed percentage="1.00">1141839217</completed><starttime>1141833596</starttime><duetime/><lastedited>1141839217</lastedited><summary>Create playlist_list_clear function</summary><comment/></item></category></gtodo>
